--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/AcceptOrderPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/AcceptOrderPage.xaml
@@ -3,10 +3,46 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinTodo.Pages.AcceptOrderPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <SwipeView>
+            <SwipeView.LeftItems>
+                <SwipeItems Mode="Reveal">
+                    <SwipeItem Text="Avböj"
+                               BackgroundColor="Red" />
+                </SwipeItems>
+            </SwipeView.LeftItems>
+            <SwipeView.RightItems>
+                <SwipeItems Mode="Reveal">
+                    <SwipeItem Text="Acceptera"
+                               BackgroundColor="Green" />
+                </SwipeItems>
+            </SwipeView.RightItems>
+
+            <!--Content-->
+
+            <StackLayout>
+                <StackLayout>
+                    <StackLayout Margin="0, 20">
+                        <Label Text="Energiverket" HorizontalOptions="Center" FontSize="30" />
+                        <Label Text="#731432" HorizontalOptions="Center" FontSize="25" />
+                    </StackLayout>
+                    <Frame BackgroundColor="LightSkyBlue" CornerRadius="15" Margin="0, 10">
+                        <StackLayout>
+                            <Label Text="Johan Willins gata 3, 416 64 Göteborg" FontSize="18" />
+                            <Label Text="Anders Andersson" FontSize="18" />
+                            <Label Text="0730-436536" FontSize="18" />
+                        </StackLayout>
+                    </Frame>
+                    <Frame BackgroundColor="LightSkyBlue" CornerRadius="15">
+                        <StackLayout HeightRequest="300">
+                            <Label FontSize="18">
+                                En katalysator har slutat att fungera i generatorn. Kolla om du kan fixa det och så fortsätter texten flera
+rader om det behövs väldigt mycket uttrymme för all den info som kan tänkas att skrivas här. Sen kanske det står extra mycket info här. Det hade kunnat
+fortsätta flera rader till.
+                            </Label>
+                        </StackLayout>
+                    </Frame>
+                </StackLayout>
+            </StackLayout>
+        </SwipeView>
     </ContentPage.Content>
 </ContentPage>
