--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
@@ -6,8 +6,11 @@
         <StackLayout>
             <Label Text="Mina Ordrar" HorizontalOptions="Center" FontSize="30" Margin="15" />
             <StackLayout Margin="0, 25">
+                <StackLayout.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OrderTapped" />
+                </StackLayout.GestureRecognizers>
                 <Label Text="2020-09-11" FontSize="25" Margin="10,0,0,0" />
-                <Frame BackgroundColor="LightSkyBlue" CornerRadius="15">
+                <Frame BackgroundColor="#f6f6f6" CornerRadius="15">
                     <Grid Margin="5">
                         <Label Text="Energiverket" Grid.Column="0" Grid.Row="0" FontSize="25" FontAttributes="Bold" VerticalTextAlignment="Start" />
                         <Label Text="#731432" Grid.Column="1" Grid.Row="0" FontSize="18" VerticalTextAlignment="Start" />
