--- a/BlazorTodo/BlazorTodo/Pages/Index.razor
+++ b/BlazorTodo/BlazorTodo/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>MOOS</h1>
+<p>Maad Operator Management System</p>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
