--- a/BlazorTodo/BlazorTodo/Shared/NavMenu.razor
+++ b/BlazorTodo/BlazorTodo/Shared/NavMenu.razor
@@ -13,13 +13,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="neworder">
+                <span class="oi oi-plus" aria-hidden="true"></span> New Order
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="orderhistory">
+                <span class="oi oi-clock" aria-hidden="true"></span> Order History
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="activeorders">
+                <span class="oi oi-bolt" aria-hidden="true"></span> Active Orders
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="customers">
+                <span class="oi oi-people" aria-hidden="true"></span> Customers
             </NavLink>
         </li>
     </ul>
