Added LogInPage and som navigation logic

--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/LogInPage.xaml
@@ -8,7 +8,8 @@
                          VerticalOptions="CenterAndExpand">
                 <Entry Placeholder="Username" Margin="60, 10" />
                 <Entry Placeholder="Password" Margin="60, 10" />
-                <Button Text="Log In" Margin="60, 10" CornerRadius="15" />
+                <Button Text="Log In" Margin="60, 10" CornerRadius="15"
+                        Clicked="LogIn_Clicked" />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
