--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderDeclinePage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderDeclinePage.xaml
@@ -3,19 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinTodo.Pages.OrderDeclinePage">
     <ContentPage.Content>
-        <StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Label Text="Meddelande till Admin"
                    HorizontalOptions="Center"
-                   FontSize="25" />
-            <Frame BackgroundColor="LightCoral"
-                   CornerRadius="15"
-                   Padding="20">
-                <Editor Placeholder="Varför avböjdes ordern?"
+                   FontSize="20"
+                   Grid.Row="0"
+                   Margin="0, 40, 0, 0" />
+            <Editor Placeholder="Varför avböjdes ordern?"
                     AutoSize="TextChanges"
-                    HeightRequest="100" />
-            </Frame>
-            <Button Text="Vill du skicka?"
-                    Clicked="Button_Clicked" />
-        </StackLayout>
+                    Grid.Row="1"
+                    VerticalOptions="Start"
+                    Margin="40,0" />
+            <Button Text="Skicka"
+                    Clicked="SendReason_Clicked"
+                    Margin="40, 30"
+                    CornerRadius="15"
+                    Grid.Row="2"
+                    VerticalOptions="End" />
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
