--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Create.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Create.razor
@@ -4,7 +4,7 @@
 
 <h3>Create</h3>
 
-<Form ButtonText="Create Developer" admin="@admin"
+<Form ButtonText="Create Admin" admin="@admin"
       OnValidSubmit="@CreateAdmin" />
 
 @code {
