--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Form.razor
@@ -41,7 +41,7 @@
     </div>
     <div class="form-group ">
         <div>
-            <label>Experience :</label>
+            <label>Phone Number :</label>
             <div>
                 <InputText @bind-Value="@admin.Phone" />
                 <ValidationMessage For="@(() => admin.Phone)" />
