--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/FetchData.razor
@@ -26,7 +26,7 @@ else
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
-                <th>Experience (Years)</th>
+                <th>Phone Number</th>
                 <th></th>
             </tr>
         </thead>
