--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
@@ -1,10 +1,9 @@
-﻿@page "/activeorders"
+﻿@page "/ordershistory"
 @inject HttpClient client
 @inject IJSRuntime js
 
-<h3>Active Orders</h3>
-<small>Here you can see all active orders</small>
-
+<h3>History Orders</h3>
+<small>Here you can see all historical orders</small>
 
 <br>
 
@@ -32,8 +31,8 @@ else
         <tbody>
             @foreach (Orders order in orders)
             {
-                if (order.orderComplete == false)
-                {
+                if (order.orderComplete == true)
+                {                   
                     <tr>
                         <td>@order.orderId</td>
                         <td>@order.opId</td>
@@ -43,7 +42,7 @@ else
                         <td>@order.customerCusId</td>
                         <td>
                             @*<a class="btn btn-success" href="admin/edit/@order.Id">Edit</a>
-                        <button class="btn btn-danger" @onclick="@(() => Delete(admin.Id))">Delete</button>*@
+                                <button class="btn btn-danger" @onclick="@(() => Delete(admin.Id))">Delete</button>*@
                         </td>
                     </tr>
                 }
