--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -13,18 +13,28 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="operatorlist">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Operators
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="customerlist">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="admin">
                 <span class="oi oi-people" aria-hidden="true"></span> Admins
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="activeorders">
+                <span class="oi oi-people" aria-hidden="true"></span> Active Orders
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ordershistory">
+                <span class="oi oi-people" aria-hidden="true"></span> HistoryOrders
             </NavLink>
         </li>
     </ul>
