--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/FetchData.razor
@@ -22,11 +22,8 @@ else
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>Email</th>
-                <th>Phone Number</th>
                 <th></th>
             </tr>
         </thead>
@@ -34,14 +31,13 @@ else
             @foreach (Admins admin in admins)
             {
                 <tr>
-                    <td>@admin.Id</td>
                     <td>@admin.FirstName</td>
                     <td>@admin.LastName</td>
-                    <td>@admin.Email</td>
-                    <td>@admin.Phone</td>
                     <td>
+                        <a class="btn btn-success" href="admin/details/@admin.Id">View</a>
                         <a class="btn btn-success" href="admin/edit/@admin.Id">Edit</a>
                         <button class="btn btn-danger" @onclick="@(() => Delete(admin.Id))">Delete</button>
+
                     </td>
                 </tr>
             }
