--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/Create.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/Create.razor
@@ -1,17 +1,19 @@
 ﻿@page "/operator/create"
 @inject HttpClient http
 @inject NavigationManager uriHelper
+@inject IJSRuntime js
 
 <h3>Create</h3>
 
-<Form ButtonText="Create operator" _op="@_op"
+<Form ButtonText="Create Operator" o="@o"
       OnValidSubmit="@CreateOperator" />
 
 @code {
-    Operators _op = new Operators();
+    Operators o = new Operators();
     async Task CreateOperator()
     {
-        await http.PostAsJsonAsync("https://localhost:44374/api/operators", _op);
+        await http.PostAsJsonAsync("https://localhost:44374/api/operators", o);
+        await js.InvokeVoidAsync("alert", $"Created operator {o.FirstName} {o.LastName} Successfully!");
         uriHelper.NavigateTo("operatorlist");
     }
 }
