--- a/NewBlazorTodo/NewBlazorTodo/Client/wwwroot/css/app.css
+++ b/NewBlazorTodo/NewBlazorTodo/Client/wwwroot/css/app.css
@@ -171,7 +171,7 @@ app {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
-
+    
     .navbar-toggler {
         display: none;
     }
@@ -181,3 +181,12 @@ app {
         display: block;
     }
 }
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin-top:30px;
+    text-align: left;
+    font-size:small;
+    color: black;
+}
+
