--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -21,28 +21,64 @@
             <NavLink class="nav-link" href="customerlist">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
-        </li>
+        </li>      
+
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="admin">
+            <NavLink class="nav-link" href="" @onclick="()=>expandSubMenuTwo= !expandSubMenuTwo">
                 <span class="oi oi-people" aria-hidden="true"></span> Admins
             </NavLink>
+            @if (expandSubMenuTwo)
+            {
+                <ul class="nav flex-column">
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="/admin/create">
+                            <span class="oi oi-person" aria-hidden="true"></span> Create Admin
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="/admin">
+                            <span class="oi oi-people" aria-hidden="true"></span> View Admins
+                        </NavLink>
+                    </li>                   
+                </ul>
+            }
         </li>
+
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="activeorders">
-                <span class="oi oi-people" aria-hidden="true"></span> Active Orders
+            <NavLink class="nav-link" href="" @onclick="()=>expandSubMenu= !expandSubMenu">
+                <span class="oi oi-cart" aria-hidden="true"></span> Orders
             </NavLink>
+            @if (expandSubMenu)
+            {
+                <ul class="nav flex-column">
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="#">
+                            <span class="oi oi-plus" aria-hidden="true"></span> Create Order
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="activeorders">
+                            <span class="oi oi-arrow-right" aria-hidden="true"></span> Active Orders
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="ordershistory">
+                            <span class="oi oi-arrow-right" aria-hidden="true"></span> History
+                        </NavLink>
+                    </li>
+                </ul>
+
+            }
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ordershistory">
-                <span class="oi oi-people" aria-hidden="true"></span> HistoryOrders
-            </NavLink>
-        </li>
+
     </ul>
+    
 </div>
 
 @code {
     private bool collapseNavMenu = true;
-
+    private bool expandSubMenu;
+    private bool expandSubMenuTwo;
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
