--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -52,7 +52,7 @@
             {
                 <ul class="nav flex-column">
                     <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="#">
+                        <NavLink class="nav-link" href="order/create">
                             <span class="oi oi-plus" aria-hidden="true"></span> Create Order
                         </NavLink>
                     </li>
