--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
@@ -35,7 +35,7 @@ else
                 {                   
                     <tr>
                         <td>@order.orderId</td>
-                        <td>@order.opId</td>
+                        <td>@order.OperatorID</td>
                         <td>@order.orderDescription</td>
                         <td>@order.orderStart</td>
                         <td>@order.orderInfo</td>
