--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Form.razor
@@ -3,6 +3,13 @@
     <DataAnnotationsValidator />
     <div class="form-group">
         <label>Operator :</label>
+        <label for="operator">Choose Operator:</label>
+
+        <select name="operator" id="operator">
+            <option value="@order.OperatorID">4</option>
+            <option value="@order.OperatorID">7</option>
+        </select>
+
         <div>
             <InputNumber @bind-Value="@order.OperatorID" />
             <ValidationMessage For="@(() => order.OperatorID)" />
