--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
@@ -12,6 +12,24 @@
                 <Label Text="2020-09-11" FontSize="25" Margin="10,0,0,0" />
                 <Frame BackgroundColor="#f6f6f6" CornerRadius="15">
                     <Grid Margin="5">
+                        <ListView>
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <ViewCell>
+                                        <Grid>
+                                            <Label Text="{Binding Name}" Grid.Column="0" Grid.Row="0" FontSize="25" FontAttributes="Bold" VerticalTextAlignment="Start"></Label>
+                                            <Label Text="{Binding OrderId}" Grid.Column="1" Grid.Row="0" FontSize="18" VerticalTextAlignment="Start"></Label>
+                                            <Label Text="{Binding Address}" Grid.Row="1" Grid.ColumnSpan="2" FontSize="18" />
+                                            <Label Text="{Binding CustomerName}" Grid.Row="2" FontSize="18" Grid.ColumnSpan="2" />
+                                            <Label Text="{Binding Phone}" Grid.Row="3" FontSize="18" Grid.ColumnSpan="2" />
+                                            <Label Text="{Binding OrderDescription}" Grid.Row="4" FontSize="18" Grid.ColumnSpan="2" />
+                                            <Label Text="Tryck för mer info" Grid.Row="5" Grid.ColumnSpan="2" HorizontalOptions="Center" Opacity=".7" VerticalOptions="End" />
+                                        </Grid>
+                                    </ViewCell>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                        
                         <ScrollView>
                         <Label Text="Energiverket" Grid.Column="0" Grid.Row="0" FontSize="25" FontAttributes="Bold" VerticalTextAlignment="Start" />
                         <Label Text="#731432" Grid.Column="1" Grid.Row="0" FontSize="18" VerticalTextAlignment="Start" />
