--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
@@ -39,7 +39,7 @@ else
                         <td>@order.orderDescription</td>
                         <td>@order.orderStart</td>
                         <td>@order.orderInfo</td>
-                        <td>@order.customerCusId</td>
+                        <td>@order.customerId</td>
                         <td>
                             @*<a class="btn btn-success" href="admin/edit/@order.Id">Edit</a>
                                 <button class="btn btn-danger" @onclick="@(() => Delete(admin.Id))">Delete</button>*@
