--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/History/FetchData.razor
@@ -2,16 +2,17 @@
 @inject HttpClient client
 @inject IJSRuntime js
 
-<h3>History Orders</h3>
-<small>Here you can see all historical orders</small>
+<h3>Historical Orders</h3>
+<small>Here you can see all history orders</small>
+
 
 <br>
 
-@if (orders == null)
+@if (activeOrderView == null)
 {
     <text>Loading...</text>
 }
-else if (orders.Length == 0)
+else if (activeOrderView.Length == 0)
 {
     <text>No Records Found.</text>
 }
@@ -20,29 +21,26 @@ else
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Operator ID</th>
-                <th>Description</th>
-                <th>Order start</th>
-                <th>Specific information</th>
-                <th>Customer ID</th>
+                <th>Operator Name</th>
+                <th>Description </th>
+                <th>Order Start</th>
+                <th>Order Info</th>
+                <th>Customer Name</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (Orders order in orders)
+            @foreach (ActiveOrderView order in activeOrderView)
             {
-                if (order.orderComplete == true)
-                {                   
+                if (order.OrderComplete == true)
+                {
                     <tr>
-                        <td>@order.orderId</td>
-                        <td>@order.OperatorID</td>
-                        <td>@order.orderDescription</td>
-                        <td>@order.orderStart</td>
-                        <td>@order.orderInfo</td>
-                        <td>@order.customerId</td>
+                        <td>@order.OpFirstName @order.OpLastName</td>
+                        <td>@order.OrderDescription</td>
+                        <td>@order.OrderStart</td>
+                        <td>@order.OrderInfo</td>
+                        <td>@order.Customer</td>
                         <td>
-                            @*<a class="btn btn-success" href="admin/edit/@order.Id">Edit</a>
-                                <button class="btn btn-danger" @onclick="@(() => Delete(admin.Id))">Delete</button>*@
+                            <a class="btn btn-success" href="#">Skicka Faktura</a>
                         </td>
                     </tr>
                 }
@@ -53,20 +51,11 @@ else
     </table>
 }
 @code {
-    Orders[] orders { get; set; }
+
+    ActiveOrderView[] activeOrderView { get; set; }
     protected override async Task OnInitializedAsync()
     {
-        orders = await client.GetFromJsonAsync<Orders[]>("https://localhost:44374/api/orders");
-        
-    }
+        activeOrderView = await client.GetFromJsonAsync<ActiveOrderView[]>("https://localhost:44374/api/activeorderview");
 
-    //async Task Delete(int adminId)
-    //{
-    //    var order = orders.First(x => x.Id == adminId);
-    //    if (await js.InvokeAsync<bool>("confirm", $"Do you want to delete {order.FirstName}'s ({order.Id}) Record?"))
-    //    {
-    //        await client.DeleteAsync($"https://localhost:44374/api/admins/ {adminId}");
-    //        await OnInitializedAsync();
-    //    }
-    //}
+    }
 }
