--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
@@ -11,13 +11,13 @@
                 </StackLayout.GestureRecognizers>
                 <!--<Label Text="2020-09-11" FontSize="25" Margin="10,0,0,0" />-->
 
-                <ListView x:Name="orderOverviewList">
+                <ListView x:Name="orderOverviewList" HasUnevenRows="False">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <ViewCell>
-                                <Grid>
+                            <ViewCell Height="400">
+                                <Grid BackgroundColor="LightCoral">
                                     <Label Text="Energiverket" Grid.Column="0" Grid.ColumnSpan="2" HorizontalOptions="CenterAndExpand" />
-                                    <Label Text="{Binding OrderId}" Grid.Row="1" Grid.Column="0" FontSize="25" FontAttributes="Bold" />
+                                    <Label Text="{Binding OrderId}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" FontSize="18" />
                                     <Label Text="{Binding OrderDescription}" Grid.Row="2" Grid.Column="1" FontSize="18" />
                                     <!--<Label Text="{Binding Address}" Grid.Row="1" Grid.ColumnSpan="2" FontSize="18" />
                                         <Label Text="{Binding CustomerName}" Grid.Row="2" FontSize="18" Grid.ColumnSpan="2" />
